--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -4,15 +4,11 @@ MAINTAINER Groupe1
 
 RUN chown -R mysql:root /var/lib/mysql/
 
-ARG MYSQL_DATABASE
-ARG MYSQL_USER
-ARG MYSQL_PASSWORD
-ARG MYSQL_ROOT_PASSWORD
+ENV MYSQL_DATABASE=database
+ENV MYSQL_USER=user
+ENV MYSQL_PASSWORD=password
+ENV MYSQL_ROOT_PASSWORD=password
 
-ENV MYSQL_DATABASE=$MYSQL_DATABASE
-ENV MYSQL_USER=$MYSQL_USER
-ENV MYSQL_PASSWORD=$MYSQL_PASSWORD
-ENV MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD
 
 ADD data.sql /etc/mysql/data.sql
 
