Réparation résolveur + SOA

--- a/resolver/named.conf
+++ b/resolver/named.conf
@@ -3,8 +3,8 @@ options {
 
         allow-recursion {
                 //172.17.0.0/24;
-		192.168.0.0/24;
-                127.0.0.1/32;
+		192.168.0.0/16;
+        	127.0.0.1/32;
         };
         dnssec-validation no;
         //dnssec-enable no;
@@ -36,13 +36,13 @@ zone "127.in-addr.arpa" IN {
         allow-update { none; };
         notify no;
 };
- zone "woodytoys.lab" IN {
-            type forward;
-            forwarders { 192.168.0.2; };
-            forward only;
-        };
-zone "0.168.192.in-addr.arpa." IN {
-            type forward;
-            forwarders { 192.168.0.2; };
-            forward only;
-        };
+zone "woodytoys.lab" IN {
+        type master;
+        file "/etc/bind/woodytoys.lab";
+        allow-update { none; };
+};
+zone "0.168.192.in-addr.arpa" IN {
+  	  type master;
+        file "/etc/bind/woodytoys.lab.rr.zone";
+        allow-update { none; };
+};
