--- a/Demo/resolver/named.conf
+++ b/Demo/resolver/named.conf
@@ -6,10 +6,11 @@ options {
 		192.168.0.0/16;
         	127.0.0.1/32;
         };
-        dnssec-validation no;
-        //dnssec-enable no;
 
-        // Configure the IPs to listen on here.
+        # dnssec-validation no;
+        # dnssec-enable no;
+
+        # Configure the IPs to listen on here.
         listen-on port 53 { any; };
         listen-on-v6 { none; };
 
@@ -23,26 +24,28 @@ zone "." IN {
         file "/usr/share/dns/root.hints";
 };
 
-zone "localhost" IN {
-        type master;
-        file "db.local";
-        allow-update { none; };
-        notify no;
-};
+# zone "localhost" IN {
+#         type master;
+#         file "db.local";
+#         allow-update { none; };
+#         notify no;
+# };
 
-zone "127.in-addr.arpa" IN {
-        type master;
-        file "db.127";
-        allow-update { none; };
-        notify no;
-};
+# zone "127.in-addr.arpa" IN {
+#         type master;
+#         file "db.127";
+#         allow-update { none; };
+#         notify no;
+# };
+
 zone "woodytoys.lab" IN {
         type master;
         file "/etc/bind/woodytoys.lab";
         allow-update { none; };
 };
+
 zone "0.168.192.in-addr.arpa" IN {
-  	  type master;
-        file "/etc/bind/woodytoys.lab.rr.zone";
+  	type master;
+        file "/etc/bind/woodytoys.lab.reverse";
         allow-update { none; };
 };
