--- a/Demo/web/Dockerfile
+++ b/Demo/web/Dockerfile
@@ -1,6 +1,8 @@
 FROM nginx:latest
-MAINTAINER Groupe1
+
+LABEL group="2TL2-1"
+
 COPY index.html /usr/share/nginx/html/index.html
 COPY health-check.conf /etc/nginx/conf.d/health-check.conf
-EXPOSE 80
 
+EXPOSE 80
