--- a/Demo/web/nginx.conf
+++ b/Demo/web/nginx.conf
@@ -1,11 +1,22 @@
-server {
-    listen 80;
-    server_name www.woodytoys.lab;
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log;
+pid /run/nginx.pid;
 
-    root /usr/share/nginx/html/;
-    index index.html;
+events {
+    worker_connections 1024;
+}
 
-    location / {
-        try_files $uri $uri/ =404;
+http {
+    server {
+        listen 80;
+        server_name www.woodytoys.lab;
+
+        root /usr/share/nginx/html;
+        index index.html;
+
+        location / {
+            try_files $uri $uri/ =404;
+        }
     }
 }
