--- a/Demo/web/nginx.conf
+++ b/Demo/web/nginx.conf
@@ -10,7 +10,7 @@ events {
 http {
     server {
         listen 80;
-        server_name www.woodytoys.lab;
+        server_name localhost;
 
         root /usr/share/nginx/html;
         index index.html;
