--- a/Demo/web/Dockerfile
+++ b/Demo/web/Dockerfile
@@ -3,7 +3,7 @@ FROM nginx:latest
 LABEL group="2TL2-1"
 
 COPY nginx.conf /etc/nginx/nginx.conf
-COPY index.html /usr/share/nginx/html/index.html
+COPY html /usr/share/nginx/html
 COPY health-check.conf /etc/nginx/conf.d/health-check.conf
 
 EXPOSE 80
