--- a/Demo/web/nginx.conf
+++ b/Demo/web/nginx.conf
@@ -1,22 +1,10 @@
-user nginx;
-worker_processes auto;
-error_log /var/log/nginx/error.log;
-pid /run/nginx.pid;
-
-events {
-    worker_connections 1024;
-}
+events {}
 
 http {
     server {
         listen 80;
         server_name localhost;
-
         root /usr/share/nginx/html;
-        index index.html;
-
-        location / {
-            try_files $uri $uri/ =404;
-        }
+        index index.html index.htm index.php;
     }
 }
