--- a/Demo/resolver/named.conf
+++ b/Demo/resolver/named.conf
@@ -24,19 +24,19 @@ zone "." IN {
         file "/usr/share/dns/root.hints";
 };
 
-# zone "localhost" IN {
-#         type master;
-#         file "db.local";
-#         allow-update { none; };
-#         notify no;
-# };
+zone "localhost" IN {
+        type master;
+        file "db.local";
+        allow-update { none; };
+        notify no;
+};
 
-# zone "127.in-addr.arpa" IN {
-#         type master;
-#         file "db.127";
-#         allow-update { none; };
-#         notify no;
-# };
+zone "127.in-addr.arpa" IN {
+        type master;
+        file "db.127";
+        allow-update { none; };
+        notify no;
+};
 
 zone "woodytoys.lab" IN {
         type master;
