--- a/Demo/db/Dockerfile
+++ b/Demo/db/Dockerfile
@@ -4,14 +4,11 @@ LABEL group="2TL2-1"
 
 RUN chown -R mysql:root /var/lib/mysql/
 
-ENV MYSQL_DATABASE=database
-ENV MYSQL_USER=user
-ENV MYSQL_PASSWORD=password
-ENV MYSQL_ROOT_PASSWORD=password
+ENV MYSQL_DATABASE=woodytoys
+ENV MYSQL_ROOT_PASSWORD=p4ssw0rd
 
-ADD data.sql /etc/mysql/data.sql
-
-RUN sed -i 's/MYSQL_DATABASE/'$MYSQL_DATABASE'/g' /etc/mysql/data.sql
-RUN cp /etc/mysql/data.sql /docker-entrypoint-initdb.d
+COPY data.sql /docker-entrypoint-initdb.d/data.sql
 
 EXPOSE 3306
+
+CMD ["mysqld"]
