--- a/Demo/client_1/Dockerfile
+++ b/Demo/client_1/Dockerfile
@@ -5,6 +5,8 @@ LABEL group="2TL2-1"
 RUN apt -y update
 RUN apt -y install links nano sudo dnsutils iputils-ping telnet mutt
 
-COPY .muttrc /root/.muttrc
+RUN adduser toto && echo "toto:toto" | chpasswd
+
+COPY .muttrc /home/toto/.muttrc
 
 CMD ["sleep", "infinity"]
