--- a/Demo/client_2/Dockerfile
+++ b/Demo/client_2/Dockerfile
@@ -5,6 +5,8 @@ LABEL group="2TL2-1"
 RUN apt -y update
 RUN apt -y install links nano sudo dnsutils iputils-ping telnet mutt
 
-COPY .muttrc /root/.muttrc
+RUN adduser tutu && echo "tutu:tutu" | chpasswd
+
+COPY .muttrc /home/tutu/.muttrc
 
 CMD ["sleep", "infinity"]
