--- a/Demo/mail/Dockerfile
+++ b/Demo/mail/Dockerfile
@@ -8,8 +8,8 @@ RUN apt-get install -y postfix dovecot-pop3d dovecot-imapd
 COPY dovecot /etc/dovecot
 COPY postfix /etc/postfix
 
-RUN adduser toto
-RUN adduser tutu
+RUN adduser toto && echo "toto:toto" | chpasswd
+RUN adduser tutu && echo "tutu:tutu" | chpasswd
 
 EXPOSE 25 143 587 993
 
