--- a/Demo_Public/resolver/named.conf
+++ b/Demo_Public/resolver/named.conf
@@ -19,24 +19,10 @@ options {
 
 };
 
-zone "." IN {
-        type hint;
-        file "/usr/share/dns/root.hints";
-};
-
-zone "localhost" IN {
-        type master;
-        file "db.local";
-        allow-update { none; };
-        notify no;
-};
-
-zone "127.in-addr.arpa" IN {
-        type master;
-        file "db.127";
-        allow-update { none; };
-        notify no;
-};
+# zone "." IN {
+#         type hint;
+#         file "/usr/share/dns/root.hints";
+# };
 
 zone "woodytoys.lab" IN {
         type master;
@@ -44,14 +30,14 @@ zone "woodytoys.lab" IN {
         allow-update { none; };
 };
 
-zone "l2-1.ephec-ti.be" IN {
-        type master;
-        file "/etc/bind/l2-1.ephec-ti.be";
-        allow-update { none; };
-};
-
 zone "0.168.192.in-addr.arpa" IN {
   	type master;
         file "/etc/bind/woodytoys.lab.reverse";
+        allow-update { none; };
+};
+
+zone "l2-1.ephec-ti.be" IN {
+        type master;
+        file "/etc/bind/l2-1.ephec-ti.be";
         allow-update { none; };
 };
