--- a/Demo_Public/resolver/named.conf
+++ b/Demo_Public/resolver/named.conf
@@ -19,10 +19,10 @@ options {
 
 };
 
-# zone "." IN {
-#         type hint;
-#         file "/usr/share/dns/root.hints";
-# };
+zone "." IN {
+        type hint;
+        file "/usr/share/dns/root.hints";
+};
 
 zone "woodytoys.lab" IN {
         type master;
@@ -32,7 +32,13 @@ zone "woodytoys.lab" IN {
 
 zone "0.168.192.in-addr.arpa" IN {
   	type master;
-        file "/etc/bind/woodytoys.lab.reverse";
+        file "/etc/bind/0.168.192.in-addr.arpa";
+        allow-update { none; };
+};
+
+zone "1.168.192.in-addr.arpa" IN {
+  	type master;
+        file "/etc/bind/1.168.192.in-addr.arpa";
         allow-update { none; };
 };
 
