--- a/Demo_Public/docker-compose.yml
+++ b/Demo_Public/docker-compose.yml
@@ -8,22 +8,86 @@ services:
       - 53:53/udp
       - 53:53/tcp
     networks:
-      secure_zone:
+      trusted_zone:
         ipv4_address: 192.168.0.1
-  # web:
-  #   container_name: 'web'
-  #   build: ./web
-  #   ports:
-  #     - 80:80
-  #     #- 443:443
-  #   networks:
-  #     secure_zone:
-  #       ipv4_address: 192.168.0.2
+  in_web:
+    container_name: 'in_web'
+    build: ./Intranet/web
+    links:
+      - in_db:in_db
+    ports:
+      - 8080:8080
+      #- 443:443
+    networks:
+      intranet:
+        ipv4_address: 192.168.1.1
+  in_db:
+    container_name: 'in_db'
+    build: ./Intranet/db
+    volumes:
+      - db-data:/var/lib/mysql
+    ports:
+      - 3306:3306
+    networks:
+      intranet:
+        ipv4_address: 192.168.1.2
+  in_mail:
+    container_name: 'in_mail'
+    build: ./Intranet/mail
+    ports:
+      - "25:25"
+      - "143:143"
+      - "587:587"
+      - "993:993"
+    networks:
+      intranet:
+        ipv4_address: 192.168.1.3
+  in_client_1:
+    container_name: 'in_client_1'
+    build: ./Intranet/client_1
+    dns:
+      - 192.168.0.1
+    networks:
+      intranet:
+        ipv4_address: 192.168.1.200
+  in_client_2:
+    container_name: 'in_client_2'
+    build: ./Intranet/client_2
+    dns:
+      - 192.168.0.1
+    networks:
+      intranet:
+        ipv4_address: 192.168.1.201
+
+  ext_web:
+    container_name: 'ext_web'
+    build: ./DMZ/web
+    ports:
+      - 80:80
+    dns:
+      - 192.168.0.1
+    networks:
+      dmz:
+        ipv4_address: 192.168.2.1
+volumes:
+  db-data:
 networks:
-  secure_zone:
+  trusted_zone:
     ipam:
       driver: default
       config: 
-        - subnet: 192.168.0.0/16
-          gateway: 192.168.254.254
+        - subnet: 192.168.0.0/24
+          gateway: 192.168.0.254
+  intranet:
+    ipam:
+      driver: default
+      config: 
+        - subnet: 192.168.1.0/24
+          gateway: 192.168.1.254
+  dmz:
+    ipam:
+      driver: default
+      config: 
+        - subnet: 192.168.2.0/24
+          gateway: 192.168.2.254
           
