--- a/Demo_Public/resolver/Dockerfile
+++ b/Demo_Public/resolver/Dockerfile
@@ -5,10 +5,9 @@ LABEL group="2TL2-1"
 COPY named.conf /etc/bind/named.conf
 
 COPY woodytoys.lab /etc/bind/woodytoys.lab
-COPY woodytoys.lab.reverse /etc/bind/woodytoys.lab.reverse
-
+COPY 0.168.192.in-addr.arpa /etc/bind/0.168.192.in-addr.arpa
+COPY 1.168.192.in-addr.arpa /etc/bind/1.168.192.in-addr.arpa
 COPY l2-1.ephec-ti.be /etc/bind/l2-1.ephec-ti.be
-# COPY l2-1.ephec-ti.be.reverse /etc/bind/l2-1.ephec-ti.be.reverse
 
 EXPOSE 53/udp
 EXPOSE 53/tcp
